<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NutritionsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginStart="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/baseline_arrow_back_ios_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/nutritions_infor"
            />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/line"
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <HorizontalScrollView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:background="@drawable/bg_species_select"
                    android:layout_marginEnd="10dp"
                    android:layout_width="100dp"
                    android:layout_height="120dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/dog_image_view"
                        android:src="@drawable/backgroud_login"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        app:civ_border_color="@color/green"
                        app:civ_border_width="2dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                    </de.hdodenhof.circleimageview.CircleImageView>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/dog_image_view"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/dog"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="120dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/cat_image_view"
                        android:src="@drawable/backgroud_login"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        app:civ_border_color="@color/green"
                        app:civ_border_width="2dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp">
                    </de.hdodenhof.circleimageview.CircleImageView>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/cat_image_view"
                        android:layout_width="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/cat"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutritions_infor"
            android:layout_marginBottom="10dp"
            android:layout_marginVertical="20dp"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:theme="@style/InPutTheme"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foot_type_layout"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/food_type"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:labelFor="@id/foot_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:padding="16dp"
                    android:id="@+id/foot_type"
                    android:cursorVisible="false"
                    android:focusable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/search"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="16dp"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:id="@+id/search"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>