<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroud_login"
    tools:context=".activity.SignupActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00BCD4"
        android:alpha="0.3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="28dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="Pet Health"
                android:textSize="40sp"
                />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:cardCornerRadius="28dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="28dp"
                >
                <ScrollView
                    android:layout_above="@id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            android:textColor="@color/primary"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nhập thông tin của bạn"
                            android:alpha="0.7"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Họ và tên"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ngày sinh"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nhập lại mật khẩu"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Email"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Địa chỉ"
                            android:layout_marginTop="25dp"
                            android:textStyle="bold"
                            android:alpha="0.7"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            />
                    </LinearLayout>
                </ScrollView>
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:background="@drawable/btn_login_custom"
                    android:alpha="0.7"
                    android:layout_marginTop="10dp"
                    android:layout_above="@+id/ln1"

                    />
                <LinearLayout
                    android:id="@+id/ln1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bạn đã có tài khoản? "
                        />
                    <TextView
                        android:id="@+id/text_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đăng nhâp"
                        android:textColor="@color/primary"
                        />
                </LinearLayout>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>